# simple_image_viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  keymapping.go  paths.go  styles.css
.github/workflows/: build.yml
shared/: Cargo.toml
shared/src/: config.rs  event.rs  lib.rs  payload.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: migrated.json
tauri/src/: command.rs  config.rs  event.rs  main.rs  path.rs  payload.rs
yew/: Cargo.toml  Trunk.toml  index.html
yew/src/: app.rs  config.rs  event.rs  keyboard.rs  main.rs  tauri.rs
