[package]
name = "simple_image_viewer-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
wasm-logger = "0.2.0"
log = "0.4.20"
shared = { path = "../shared" }

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
